--- a/server/static/index.html
+++ b/server/static/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8">
-    <title>Third Project</title>
+  <meta charset="utf-8">
+  <title>React App</title>
+  <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-    <div id="App"></div>
-    <script src='/js/app.js'></script>
+  <div id="react-app"></div>
+
+  <script src="/js/app.js"></script>
 </body>
 </html>
